--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,28 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches/build_file_checksums.ser
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
+.gradle/
+.idea/
+.signing/
+.externalNativeBuild/
+.navigation/
+
+build/
+/*/build/
+captures/
+
+local.properties
+keystore.properties
+com_crashlytics_export_strings.xml
+
 .DS_Store
-/build
-/captures
-.externalNativeBuild
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+*.iml
+*.log
+*.apk
+*.ap_
+*.dex
+*.class
