--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "dmytro.com.mvvmtemplate"
+        applicationId "com.dmytro.mvvmdbtemplate"
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
