--- a/database/src/main/AndroidManifest.xml
+++ b/database/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dmytro.com.database" />
+    package="com.dmytro.database" />
